Fix iOS magnifying glass and improve logo visibility in onboarding

--- a/src/index.css
+++ b/src/index.css
@@ -111,3 +111,23 @@
     @apply w-5 h-5 mr-3 text-gray-400;
   }
 }
+
+/* Prevent iOS magnifying glass */
+* {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* Allow selection in input fields */
+input, textarea {
+  -webkit-user-select: auto;
+  -khtml-user-select: auto;
+  -moz-user-select: auto;
+  -ms-user-select: auto;
+  user-select: auto;
+}
